[package]
name = "ritw"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["default", "macros"] }
axum-extra = { version = "0.10", features = ["default", "cookie"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
once_cell = "1.21"
openidconnect = { version = "4.0", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
lazy_static = "1.5"
mime_guess = "2.0"
tera = { version = "1.20", features = ["default"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
